// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsProductEdit > renders correcly when editing and getStationDifference is not empty 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
  id="product-form-page"
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      test product
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved="1"
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              filled="true"
              grow="false"
              hint="Product name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Name"
              required=""
              rules="Product name"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Product group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Product group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              error="false"
              filled="true"
              grow="false"
              hint="Product code"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Product code"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              hint="Primary unit - E.g. pcs, kg, litre"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Primary unit"
              positiontop="true"
              required=""
              rules="Primary unit - E.g. pcs, kg, litre"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              hint="Alternative unit - E.g. box, reel (Optional)"
              id="alternative-unit-field"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Alternative unit"
              positiontop="true"
              required=""
              rules="true"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Where is this produced?
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add station-specific details
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <tiny-cards-list-stub
            cardbuttons=""
            flagiconkey=""
            items="[object Object]"
            listitemicon=""
            subtitlekeyvaluepairs=""
            titlefunction="[Function]"
            titletextkey=""
            useslot="true"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1 mt-2"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-button-stub
            color=""
            disabled="false"
            icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            iconcolor=""
            text="station"
            textclass=""
            type="primary-light"
          />
        </v-col-stub>
      </v-row-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-tooltip-stub
        activatorprops="[object Object]"
        attach="false"
        closeonback="false"
        closeoncontentclick="false"
        contained="false"
        disabled="false"
        eager="true"
        interactive="false"
        location="top"
        locationstrategy="connected"
        minwidth="0"
        modelvalue="false"
        noclickanimation="false"
        offset="10"
        openonclick="false"
        openonhover="true"
        origin="auto"
        persistent="false"
        scrim="false"
        scrollstrategy="reposition"
        sticktotarget="false"
        viewportmargin="12"
        zindex="2000"
      >
        <span>
          Duplicate
        </span>
      </v-tooltip-stub>
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsProductEdit > renders correctly when adding new 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
  id="product-form-page"
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      New: Product
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved=""
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              disabled="false"
              filled="true"
              grow="false"
              hint="Product name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Name"
              required=""
              rules="Product name"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Product group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Product group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              disabled="false"
              error="false"
              filled="true"
              grow="false"
              hint="Product code"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Product code"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              disabled="false"
              hint="Primary unit - E.g. pcs, kg, litre"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Primary unit"
              positiontop="true"
              required=""
              rules="Primary unit - E.g. pcs, kg, litre"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              disabled="false"
              hint="Alternative unit - E.g. box, reel (Optional)"
              id="alternative-unit-field"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Alternative unit"
              positiontop="true"
              required=""
              rules="true"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Where is this produced?
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add station-specific details
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <tiny-cards-list-stub
            cardbuttons=""
            flagiconkey=""
            items=""
            listitemicon=""
            subtitlekeyvaluepairs=""
            titlefunction="[Function]"
            titletextkey=""
            useslot="true"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1 mt-2"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-button-stub
            color=""
            disabled="false"
            icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            iconcolor=""
            text="station"
            textclass=""
            type="primary-light"
          />
        </v-col-stub>
      </v-row-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsProductEdit > renders correctly when edit is forbidden 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
  id="product-form-page"
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      test product
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved=""
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              disabled="true"
              filled="true"
              grow="false"
              hint="Product name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Name"
              required=""
              rules="Product name"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Product group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Product group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              disabled="true"
              error="false"
              filled="true"
              grow="false"
              hint="Product code"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Product code"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              disabled="true"
              hint="Primary unit - E.g. pcs, kg, litre"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Primary unit"
              positiontop="true"
              required=""
              rules="Primary unit - E.g. pcs, kg, litre"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              disabled="true"
              hint="Alternative unit - E.g. box, reel (Optional)"
              id="alternative-unit-field"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Alternative unit"
              positiontop="true"
              required=""
              rules="true"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Where is this produced?
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add station-specific details
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <tiny-cards-list-stub
            cardbuttons=""
            flagiconkey=""
            items="[object Object],[object Object]"
            listitemicon=""
            subtitlekeyvaluepairs=""
            titlefunction="[Function]"
            titletextkey=""
            useslot="true"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1 mt-2"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-button-stub
            color=""
            disabled="false"
            icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            iconcolor=""
            text="station"
            textclass=""
            type="primary-light"
          />
        </v-col-stub>
      </v-row-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsProductEdit > renders correctly when editing existing 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
  id="product-form-page"
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      test product
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved=""
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              filled="true"
              grow="false"
              hint="Product name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Name"
              required=""
              rules="Product name"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Product group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Product group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              error="false"
              filled="true"
              grow="false"
              hint="Product code"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Product code"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              hint="Primary unit - E.g. pcs, kg, litre"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Primary unit"
              positiontop="true"
              required=""
              rules="Primary unit - E.g. pcs, kg, litre"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-combobox-stub
              appendicon=""
              hint="Alternative unit - E.g. box, reel (Optional)"
              id="alternative-unit-field"
              item-title="name"
              item-value="name"
              items=""
              maxlength="5"
              menu="false"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Alternative unit"
              positiontop="true"
              required=""
              rules="true"
              validate-on-blur=""
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Where is this produced?
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add station-specific details
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-row-stub
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="px-1"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <tiny-cards-list-stub
            cardbuttons=""
            flagiconkey=""
            items="[object Object],[object Object]"
            listitemicon=""
            subtitlekeyvaluepairs=""
            titlefunction="[Function]"
            titletextkey=""
            useslot="true"
          />
        </v-col-stub>
        <v-col-stub
          class="px-1 mt-2"
          cols="12"
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <evocon-v-button-stub
            color=""
            disabled="false"
            icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
            iconcolor=""
            text="station"
            textclass=""
            type="primary-light"
          />
        </v-col-stub>
      </v-row-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-tooltip-stub
        activatorprops="[object Object]"
        attach="false"
        closeonback="false"
        closeoncontentclick="false"
        contained="false"
        disabled="false"
        eager="true"
        interactive="false"
        location="top"
        locationstrategy="connected"
        minwidth="0"
        modelvalue="false"
        noclickanimation="false"
        offset="10"
        openonclick="false"
        openonhover="true"
        origin="auto"
        persistent="false"
        scrim="false"
        scrollstrategy="reposition"
        sticktotarget="false"
        viewportmargin="12"
        zindex="2000"
      >
        <span>
          Duplicate
        </span>
      </v-tooltip-stub>
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsProductEdit > renders correctly when selected product is not in productsMap 1`] = `<removed-entity-view-stub />`;
